@@ -10,7 +10,7 @@ import top.gregtao.concerto.music.meta.music.MusicMetaData;
 import top.gregtao.concerto.util.FileUtil;
 
 import java.io.InputStream;
-import java.net.URL;
+import java.net.URI;
 
 public class SharedMusic extends PathFileMusic {
     private final String rawLyrics, rawSubLyrics;
@@ -39,7 +39,7 @@ public class SharedMusic extends PathFileMusic {
     @Override
     public InputStream getMusicSource() throws MusicSourceNotFoundException {
         try {
-            return FileUtil.createBuffered(new HttpURLInputStream(new URL(this.getRawPath())));
+            return FileUtil.createBuffered(new HttpURLInputStream(URI.create(this.getRawPath()).toURL()));
         } catch (Exception e) {
             throw new MusicSourceNotFoundException(e);
         }
